css/layout.css
.hidden {
  display: none !important;
}

.container {
  max-width: 575px;
  margin: 0 auto;
}

.row {
  display: flex;
  flex-wrap: wrap;
}

.column-full,
.column-half {
  width: 100%;
}

img {
  width: 100%;
  object-fit: cover;
  border-radius: 0.5rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.card {
  width: 90%;
  box-shadow: 10px 10px 20px black;
}

.card-text {
  padding: 0.2rem 1.4rem 0.3rem;
}

.fa-shuffle {
  position: absolute;
  right: 4.4rem;
}

.fa-circle-question {
  position: absolute;
  right: 1.5rem;
}

#search {
  padding: 0.5rem 0.2rem;
  margin-left: -0.4rem;
}

::placeholder {
  padding-left: 0.5rem;
}

.button-search {
  position: absolute;
  left: 13.5rem;
  margin-left: -0.8rem;
}

.nav {
  padding: 0.1rem 1.3rem 1rem;
}

.card-small {
  width: 90%;
  height: 250px;
  box-shadow: 10px 10px 20px black;
}

.button-sale {
  position: absolute;
  left: 20px;
}

/* Modal */
.center-page {
  min-height: 100vh;
  justify-content: center;
}

.rectangle {
  width: 350px;
  height: 760px;
  margin-top: 2.5rem;
}

.modal-text {
  font-size: 1.85rem;
  margin-bottom: -0.2rem;
  margin-top: 2.5rem;
}

.modal-body {
  font-size: 1.2rem;
  padding: 0 1rem;
}

.fa-xmark {
  transform: scale(2);
  position: absolute;
  right: 1rem;
  top: -1.5rem;
}

.li-modal {
  padding-bottom: 0.4rem;
}

/* Notes */
.notes-card {
  width: 90%;
  height: 630px;
  display: flex;
}

.fa-pen-to-square {
  transform: scale(2);
  position: absolute;
  top: 16.4rem;
  right: 1.3rem;
}

.notes-img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.notes-title {
  font-size: 1.5rem;
  margin-left: 0.9rem;
  max-width: 86%;
}

.notes-body {
  font-size: 1.2rem;
  margin-left: 0.9rem;
  margin-top: -1rem;
}

.links-list li a {
  font-size: 1.2rem;
}

/* Edit */
.status-dropdown {
  padding: 0.5rem 6.5rem 0.5rem 0.5rem;
}

#notes {
  width: 245px;
  height: 80px;
}

.link-description {
  width: 120px;
  height: 25px;
}

.link-url {
  width: 160px;
  height: 25px;
}

.form-submit-button {
  padding: 1rem;
}

@media screen and (min-width: 768px) {
  .container {
    max-width: 1350px;
  }

  .column-half {
    width: 50%;
  }

  .column-two-fifths {
    width: 40%;
  }

  .column-three-fifths {
    width: 60%;
  }

  .column-three-sevenths {
    width: calc(3 / 7 * 100%);
  }

  .column-four-sevenths {
    width: calc(4 / 7 * 100%);
  }

  .nav {
    display: flex;
    justify-content: space-between;
    padding: 0 2rem;
  }

  .nav-top {
    gap: 3.5rem;
  }

  .nav-bottom {
    display: flex;
    justify-content: space-between;
    gap: 2.3rem;
  }

  .fa-shuffle {
    position: static;
    transform: scale(1.6);
  }

  .fa-circle-question {
    position: static;
    transform: scale(1.7);
  }

  .button-search {
    position: static;
    margin-left: -1.6rem;
  }

  #search {
    padding: 0.5rem 1.2rem;
  }

  ::placeholder {
    padding-left: 0;
  }

  .fa-feather-pointed {
    margin-right: -2rem;
  }

  .card {
    width: 70%;
    height: 330px;
    display: flex;
    overflow: auto;
  }

  .card-text {
    padding: 0.2rem 2rem 1.7rem 1.4rem;
  }

  img {
    width: 100.05%;
    height: 100%;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    object-fit: cover;
  }

  .card-small {
    width: 500px;
    height: 340px;
    margin: 1rem;
    position: relative;
  }

  .gallery {
    display: flex;
    justify-content: center;
    gap: 2.5rem;
    flex-wrap: wrap;
  }

  .button-sale {
    position: absolute;
    left: 0;
    top: 0;
  }

  .top-right-round {
    border-top-right-radius: 0.5rem;
  }

  /* Modal */
  .center-page {
    align-items: center;
    justify-content: center;
  }

  .rectangle {
    width: 1200px;
    height: 600px;
    padding: 0.5rem;
  }

  .modal-text {
    font-size: 2rem;
  }

  .modal-body {
    font-size: 1.5rem;
    padding: 0 3rem;
  }

  .fa-xmark {
    transform: scale(2.5);
    position: absolute;
    right: 2rem;
    top: 0;
  }

  .li-modal {
    padding-bottom: 0.5rem;
  }

  /* Notes */
  .notes-card {
    width: 90%;
    height: 630px;
  }

  .fa-pen-to-square {
    transform: scale(3);
    position: absolute;
    right: 3rem;
    top: 2.7rem;
  }

  .notes-img {
    object-fit: cover;
    width: 100%;
    height: 500px;
    margin-top: 2rem;
    padding-left: 1rem;
    padding-right: 1rem;
  }

  .notes-title {
    font-size: 2.2rem;
    margin-left: 1rem;
    margin-top: 2rem;
    max-width: 85%;
  }

  .notes-body {
    font-size: 1.4rem;
    margin-left: 1rem;
  }

  .links-list li a {
    font-size: 1.4rem;
  }

  /* Edit */
  label.star:hover {
    transform: rotate(-15deg) scale(1.3);
  }

  .status-dropdown {
    padding: 0.5rem 21.5rem 0.5rem 0.5rem;
  }

  #notes {
    width: 490px;
    height: 100px;
  }

  .link-description {
    width: 230px;
    height: 35px;
    font-size: 1rem;
  }

  .link-url {
    width: 310px;
    height: 35px;
    font-size: 1rem;
  }

  .form-submit-button {
    padding: 1rem 1.5rem;
  }

  /* Delete Modal */
  .rectangle-small {
    width: 370px;
    padding: 0.5rem;
  }
}

